force-app/main/default/objects/DevOps_Task__c/DevOps_Task__c.object-meta.xml
<CustomObject>
    <label>DevOps Task</label>
    <nameField>
        <displayFormat>DT-{00000}</displayFormat>
        <label>DevOps Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DevOps Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>