force-app/main/default/objects/DevOps_Task__c/fields/Deployment_Task_Time__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Task_Time__c</fullName>
    <label>Deployment Task Time</label>
    <type>DateTime</type>
</CustomField>