force-app/main/default/objects/DevOps_Task__c/fields/DevOps_Assigned__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DevOps Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DevOps_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>