force-app/main/default/objects/DevOps_Task__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>DevOps Tasks</relationshipLabel>
    <relationshipName>DevOps_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>