force-app/main/default/objects/DevOps_Task__c/fields/Request_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Start_Time__c</fullName>
    <label>Request Start Time</label>
    <type>DateTime</type>
</CustomField>